css/schedule.css
/* ... */
/*  Display Style: Timetable  */
#kompassi_schedule[data-display="timetable"] {
	.table-wrapper {
		margin-bottom: calc( var(--kompassi-padding) * 2);
	}

	.table-toolbar {
		display: grid;
		grid-template-columns: auto max-content;
	}

	.table-controls {
		--kompassi-padding: 0.2em;
		--kompassi-icon-size: 16px;
		text-align: right;

		a {
			box-sizing: content-box;

			&:not(.active) {
				cursor: not-allowed;
			}
		}
	}

	.kompassi-integration.has-dark-background & .kompassi-subheading {
		color: var(--kompassi-fg-invert);
	}

	.table {
		position: relative;
		display: grid;
		grid-gap: 0 var(--kompassi-padding);
		grid-template-rows: 2em;
		margin: var(--kompassi-padding) 0;
		padding: 0 var(--kompassi-padding) 0 0;
		background-color: var(--kompassi-bg);
		box-shadow: var(--kompassi-box-shadow);
		border-radius: var(--kompassi-radius);
		overflow-x: scroll;

		scroll-snap-type: x proximity;

		&::before,
		&::after {
			position: absolute;
			display: block;
			height: 100%;
			width: 40px;
			z-index: 4000;
		}

		&.can-scroll-left {
			&::before {
				content: '';
				left: var(--kompassi-schedule-timetable-time-width);
				background-image: radial-gradient(farthest-side at 0% 50%, rgba(0 0 0 20%), rgba(0 0 0 0%));
			}
		}

		&.can-scroll-right {
			&::after {
				content: '';
				right: 0;
				background-image: radial-gradient(farthest-side at 100% 50%, rgba(0 0 0 20%), rgba(0 0 0 0%));
			}
		}

		.heading {
			padding: var(--kompassi-schedule-timetable-program-padding);
			font-weight: 600;
		}

		.time {
			position: sticky;
			left: 0;
			z-index: 10;
			padding: var(--kompassi-schedule-timetable-program-padding);
			white-space: nowrap;

			&.time-hour {
				font-weight: 600;

				&:not(.first)::before {
					content: '';
					display: block;
					position: absolute;
					top: 0;
					left: 0;
					height: 1px;
					width: 100%;
					background-color: var(--kompassi-fg-25);
				}
			}
			&.time-minute {
				/* TODO */
				z-index: 11;
				border-top: 1px solid var(--kompassi-fg-75);
				opacity: 0.4;

				span {
					opacity: 0;
				}
			}
		}

		.time-bar {
			border-top: 1px solid var(--kompassi-fg-25);
			margin: 0 calc(-1 * var(--kompassi-padding));
			scroll-snap-align: start;

			&.first {
				border-top: none;
			}

			&:last-child {
				border-bottom-right-radius: var(--kompassi-radius);
				border-bottom-left-radius: var(--kompassi-radius);
			}
		}

		.time-odd {
			background-color: var(--kompassi-bg);
		}
		.time-even {
			background-color: #f2f2f2; /* TODO */
		}
	}

	article {
		margin-top: 6px;
		margin-bottom: 6px;
		padding: var(--kompassi-schedule-timetable-program-padding);
		background-color: var(--kompassi-program-color,var(--kompassi-program-color-default));
		background-image: linear-gradient(to bottom,rgba(0 0 0 25%),rgba(0 0 0 15%));
		color: #fff;
		box-shadow: var(--kompassi-box-shadow);
		z-index: 2;
		scroll-snap-align: start;

		section {
			display: none;
		}

		details {
			height: 100%;
		}

		summary {
			height: 100%;
			display: grid;
			grid-template-areas: "title" "favorite";
		}

		.title {
			word-wrap: anywhere;
		}

		.favorite {
			align-self: end;
			justify-self: end;
		}

		.kompassi-icon-favorite::before {
			margin-right: 0;
		}

		.secondary {
			display: none;
		}

		&:hover {
			text-shadow: 0.05em 0.05em 0.1em rgba(0 0 0 80%);
			filter: brightness(1.25);
			z-index: 2000;
		}
	}
}


/*
 *  Modals
 *
 */

/*  Program  */

#kompassi_modal.kompassi-program {
	.content {
		.actions {
			position: relative;

			> *,
			&::before {
				position: relative;
				z-index: 2;
			}

			&::before {
				content: ' ';
				display: block;
				position: absolute;
				top: 0;
				right: var(--kompassi-padding-large);

				height: calc(100% + var(--kompassi-padding) * 2);
				width: calc(var(--kompassi-icon-size) + var(--kompassi-padding-large) * 2);

				margin-top: calc(-1 * var(--kompassi-padding));
				margin-right: calc(-1 * var(--kompassi-padding-large));
				margin-left: var(--kompassi-padding);

				background-image: var(--kompassi-program-icon, var(--kompassi-program-icon-default));
				background-size: calc(var(--kompassi-icon-size) * 1.5);
				background-repeat: no-repeat;
				background-position: 50% 50%;
			}

			&::after {
				content: '';
				position: absolute;
				z-index: 1;

				top: 0;
				right: 0;
				bottom: 0;
				left: 0;
				background-color: var(--kompassi-program-color, var(--kompassi-program-color-default));
				filter: brightness(90%);
			}
		}

		.main {
			justify-content: space-between;
		}
	}

	.footer {
		> :not(.dimension) {
			display: block;
			margin-bottom: 0.3em;
		}
	}

	/* TODO: Prefer container query */
	@media screen and (width < 600px) {
		> .content > .actions {
			padding-right: calc(var(--kompassi-icon-size) + var(--kompassi-padding-large) * 2);
		}
	}
}

#kompassi_modal.kompassi-legend {
	dl.dimension-colors {
		display: grid;
		grid-template-columns: 2em auto;
		grid-gap: 0 1em;

		dt span {
			width: 100%;
			height: var(--kompassi-line-height);
			display: inline-block;
		}

		dd {
			margin-left: 0;
		}
	}
}

/* TODO */
#kompassi_modal .program-title-list li::before {
	display: inline-block;
	width: 1.25em;
	content: "–";
}


/*
 *  Annotations
 *
 */

#kompassi_modal.kompassi-program dl {
	margin: var(--kompassi-padding-large) 0 0 0;
	padding-top: var(--kompassi-padding-large);
	border-top: 1px solid var(--kompassi-fg-25);
}

/*
 *  Dimensions
 *
 */

.kompassi-dimensions {
	margin-top: var(--kompassi-padding);

	.dimension {
		display: inline;
		cursor: help;

		&:empty {
			display: none;
		}

		.value {
			display: inline-block;
			max-width: 100%;
			padding: 0.2em 0.6em;
			margin-right: 0.5em;
			margin-bottom: 0.5em;
			background-color: var(--kompassi-dimension-color,var(--kompassi-dimension-color-default));
			color: #fff;
			border-radius: 9999px;
			overflow-wrap: break-word;
			line-height: 1.2em;
		}
	}
}
/* ... */

